--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,11 @@ dependencies:
   stacked: ^3.4.3
   get: ^4.6.6
   smooth_corner: ^1.1.0
+  flutter_staggered_grid_view: ^0.7.0
+  scrollable_positioned_list: ^0.3.8
+  flutter_svg: ^2.0.10+1
+  photo_view: ^0.15.0
+  connectivity_plus: ^6.0.5
 
 dev_dependencies:
   flutter_test:
@@ -70,6 +75,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/icons/
     - assets/fonts/
 
   # An image asset can refer to one or more resolution-specific "variants", see
